...
            "state" : "translated",
            "value" : "Caméra"
          }
        }
      }
    },
    "Cancel" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cancel"
          }
...
            "state" : "translated",
            "value" : "Fermer les onglets en dessous"
          }
        }
      }
    },
    "Close Other Tabs" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Fermer les autres onglets"
          }
...
            "state" : "translated",
            "value" : "Mode développeur"
          }
        }
      }
    },
    "Disable shortcut" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Disable shortcut"
          }
...
            "state" : "translated",
            "value" : "Afficher les téléchargements"
          }
        }
      }
    },
    "Duplicate Tab" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Dupliquer l’onglet"
          }
...
            "state" : "translated",
            "value" : "Rétablir tous les raccourcis clavier ?"
          }
        }
      }
    },
    "Restore default" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Restore default"
          }
...
            "state" : "translated",
            "value" : "Rétablir le raccourci par défaut"
          }
        }
      }
    },
    "Restore defaults" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Restore defaults"
          }
...
            "state" : "translated",
            "value" : "Réglages"
          }
        }
      }
    },
    "Settings…" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Settings…"
          }
...
            "state" : "translated",
            "value" : "Groupes d’onglets et onglets fermés récemment"
          }
        }
      }
    },
    "Tabs" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Tabs"
          }
...
            "state" : "translated",
            "value" : "Mettre à jour « %@ » ?"
          }
        }
      }
    },
    "Use Aero first" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Use Aero first"
          }
...
            "state" : "translated",
            "value" : "Utiliser un mot de passe fort"
          }
        }
      }
    },
    "Use website first" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Use website first"
          }
...
